--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
-<!DOCTYPE html><html lang="en">
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
+    <title>Planet Palette</title>
     <script src="libraries/p5.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <script src="sketch.js"></script>
@@ -9,4 +11,5 @@
   </head>
   <body>
 
-</body></html>
+</body>
+</html>
