--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html><html lang="en">
 
 <head>
+  <h1>Planet Palette</h1>
     <script src="libraries/p5.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <script src="sketch.js"></script>
